# modbus-core

./: .codespellignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: continuous_integration.yaml  pre-commit.yaml  security_audit.yaml
LICENSES/: MIT.txt
src/: error.rs  frame.rs  lib.rs  rtu.rs  slave.rs  util.rs
src/codec/: mod.rs  rtu.rs
src/codec/rtu/: client.rs  mod.rs  server.rs
src/codec/tcp/: client.rs  mod.rs  server.rs
src/frame/: coils.rs  data.rs  mod.rs  rtu.rs  tcp.rs
