[package]
name = "modbus-core"
description = "Modbus base library"
version = "0.1.1"
authors = ["slowtec GmbH", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT/Apache-2.0"
keywords = ["fieldbus", "modbus", "hardware", "automation"]
homepage = "https://github.com/slowtec/modbus-core"
repository = "https://github.com/slowtec/modbus-core"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true

[dependencies]
log = "0.4.26"
byteorder = { version =  "1.5.0", default-features = false }
defmt = {version = "1.0.1", optional = true}

[features]
default = ["tcp", "rtu"]
tcp = []
rtu = []
std = ["byteorder/std"]
defmt = ["dep:defmt"]

[badges]
maintenance = { status = "actively-developed" }
